--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1059,7 +1059,7 @@ Navbar Area CSS
 // Navbar toggler
 .navbar-toggler {
     border: none;
-    background: #eee !important;
+    background: #eee ;
     padding: 10px;
     border-radius: 0;
 
